Auth error fix